fix first table column not showing thingy on invoice page

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1361,3 +1361,10 @@ table{
     }
   }
 }
+.single-invoice{
+  td, th{
+    &:nth-child(1){
+      display: table-cell;
+    }
+  }
+}
